tests/parser/command_form/invalid_06.m.out
In invalid_06.m, line 5
|     potato +kitten % unknown potato
|            ^^^^^^^ error: expected NEWLINE, found CARRAY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
