tests/parser/command_form/invalid_06.m
% (c) Copyright 2019 Florian Schanda

function invalid_06()
    kitten = 42;
    potato +kitten % unknown potato
end
